# Cubicuous

./: .gitignore  CMakeLists.txt
doc/: developer.md
src/: Game.cpp  Game.h  GameSettings.cpp  GameSettings.h
src/Core/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Exception.h  GeometryManager.cpp  GeometryManager.h  ILoop.h  Movable.cpp  Movable.h  Scene.cpp  Scene.h
src/Core/Loops/: ConstSpeedVarFps.cpp  ConstSpeedVarFps.h  ILoop.h
src/Core/MatrixManager/: IMatrixManager.h  MVPMatrixManager.cpp  MVPMatrixManager.h  MVPSepMatrixManager.cpp  MVPSepMatrixManager.h
src/Core/Mesher/: IMesher.h  MeshPart.cpp  MeshPart.h  MonotoneMesher.cpp  MonotoneMesher.h
src/Core/Structure/: Structure.cpp  Structure.h  Voxel.h
src/Debugging/: Logger.cpp  Logger.h
src/Graphics/: Exception.h  GraphicsException.h  Renderable.h  Shader.h  ShaderException.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  Uniform.h  VertexArray.h  VertexBuffer.h
src/Graphics/Renderer/: ColorRenderer.cpp  ColorRenderer.h  IRenderer.h
src/Window/: Exception.h  Input.cpp  Input.h  Window.cpp  Window.h  WindowException.h
test/: main.cpp
test/Game/: CubeEntity.cpp  CubeEntity.h  SideColoredCubeEntity.h  TestScene.cpp  TestScene.h  comparisonoutput  jswithlog  main.cpp  test.frag  test.vert
test/Window/: main.cpp
test/window/: main.cpp
